# urchin

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  FEATURES.md  PRIVACY.md  README.md  TODO.md  index.html  og_template.html
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/androidTest/java/guru/urchin/sdr/: FakeUsbDetector.kt  LoRaWanJsonParserTest.kt  MeshtasticJsonParserTest.kt  SdrJsonFixtures.kt  UsbSdrHarnessTest.kt
app/src/androidTest/java/guru/urchin/ui/: MainActivityTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  interactive_stub.c  sdr_rtlsdr.c
app/src/main/cpp/p25/: c4fm_demod.c  c4fm_demod.h  json_out.c  json_out.h  p25_fec.c  p25_fec.h  p25_frame.c  p25_frame.h  p25_scanner.c
app/src/main/java/guru/urchin/: UrchinApp.kt
app/src/main/java/guru/urchin/alerts/: AlertModels.kt  DefaultAlertRules.kt  DeviceAlertNotifier.kt
app/src/main/java/guru/urchin/analysis/: AnomalyDetector.kt  CorrelationEngine.kt  EobBuilder.kt
app/src/main/java/guru/urchin/data/: AffinityGroupDao.kt  AffinityGroupEntity.kt  AffinityGroupMemberEntity.kt  AffinityGroupRepository.kt  AffinityImportLogEntity.kt  AlertRuleDao.kt  AlertRuleEntity.kt  AlertRuleRepository.kt  AppDatabase.kt  CorrelationDao.kt  CorrelationEntity.kt  DatabaseKeyManager.kt  DatabaseMigrationHelper.kt  DeviceDao.kt  DeviceEntity.kt  DeviceObservation.kt  DeviceRepository.kt  SightingDao.kt  SightingEntity.kt
app/src/main/java/guru/urchin/export/: BulkExporter.kt
app/src/main/java/guru/urchin/group/: BundleExporter.kt  BundleImporter.kt  BundleSerializer.kt  DataMerger.kt  EcdhKeyManager.kt  GroupKeyManager.kt  GroupSharingConfig.kt  GroupStreamRelay.kt  Hkdf.kt
app/src/main/res/drawable/: ic_protocol_adsb.xml  ic_protocol_lorawan.xml  ic_protocol_meshtastic.xml  ic_protocol_p25.xml  ic_protocol_pocsag.xml  ic_protocol_sidewalk.xml  ic_protocol_tpms.xml  ic_protocol_wmbus.xml  ic_protocol_zwave.xml
app/src/main/res/layout/: activity_affinity_group_detail.xml  activity_affinity_groups.xml  activity_affinity_import.xml  activity_alerts.xml  activity_device_detail.xml  activity_main.xml  dialog_alert_rule.xml  item_affinity_group.xml  item_affinity_member.xml  item_alert_rule.xml  item_device.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
docs/: EMULATOR_SETUP.md  PROTOCOLS.md  RTL433_SETUP.md
scripts/: sdr-simulator.py  setup-third-party.sh  spectran-bridge.py
(+95 files in other folders)
